--- a/HOME (1).html
+++ b/HOME (1).html
@@ -7,7 +7,7 @@
 		<title> HOME </title>
 		<link rel="sortcut icon" href="" type="" />
         <meta charset="utf-8"/>
-        <link rel="stylesheet" type="text/css" href="CSS.css" />
+        <link rel="stylesheet" type="text/css" href="css/style_home.css" />
 		<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,15 +21,14 @@
 	<section class="header">
 		<nav>
 
-		<a href="HOME.html"> <img src="IMAGENS/LOGO.png" width="25%"  height="25%"> </a>
+		<a href="HOME.html"> <img src="img/logo-fatec.png" width="25%"  height="25%"> </a>
 		<div class="nav-links">
 		
 			<i class="fa fa-times"></i>
 			
 		<ul>
-			<li> <a href="ENTRAR.html"> ENTRAR </a> </li>
-			<li> <a href=""> SERVIÇOS </a> </li>
-			<li> <a href=""> SOBRE </a> </li>
+			<li> <a href="galeria.html"> GALERIA </a> </li>
+			<li> <a href="contato.html"> CONTATO </a> </li>
 		</ul>
 
 		<i class="fa fa-bars" aria-hidden="true"></i>
@@ -46,64 +45,42 @@
 	</section>	
 
 	<section class="veja-carros">
-
-		<h1> VEJA NOSSOS CARROS </h1>
-		<p> Carros e carros.. O que seriam carros? Além de ferro com rodas </p>
-
-		<div class="produto">
-
-			<div class="veja-carros-col">
-			<img src="IMAGENS/Corsa.png">
-			<h3> CORSA </h3>
-			<p> Chevrolet Corsa 1997 Branco </p>
-			<h3> R$ 1.000 </h3>
-			</div>
-
-			<div class="veja-carros-col">
-			<img src="IMAGENS/Retrovisor_Volvo.png">
-			<h3> RETROVISOR DO VOLVO </h3>
-			<p> Retrovisor volvo FH/FM 2010 </p>
-			<h3> R$ 1.100 </h3>
-			</div>
-
-			<div class="veja-carros-col">
-			<img src="IMAGENS/kawasaki.png">
-			<h3> KAWASAKI </h3>
-			<p> Kawasaki Ninja 400 2019	</p>
-			<h3> R$ 29.900 </h3>
-			</div>
-
-		</div>
-		
-		<br>
-
-		<div class="produto">
-
-			<div class="veja-carros-col">
-			<h3> Corsa de mil reais </h3>
-			<img src="IMAGENS/Corsa.png">
-			<p> Carros e carros.. O que seriam carros? Além de ferro com rodas.
-			E cores fortes, rodas circunfericas e moteres v8. </p>
-			</div>
-
-			<div class="veja-carros-col">
-			<h3> Retrovisor do VOLVO </h3>
-			<p> Carros e carros.. O que seriam carros? Além de ferro com rodas.
-			E cores fortes, rodas circunfericas e moteres v8. </p>
-			</div>
-
-			<div class="veja-carros-col">
-			<h3> Caminhão Foda </h3>
-			<p> Carros e carros.. O que seriam carros? Além de ferro com rodas.
-			E cores fortes, rodas circunfericas e moteres v8. </p>
-			</div>
+		<section class="secao-membro">
+            <div>
+                <img class="foto-membro" src="..\T1_GRUPO\Foto\foto-gabriel.jpg" alt="Foto de rosto do membro do grupo: Gabriel">
+            </div>
+            <div>
+                <h2 class="nome-membro">Gabriel Freitas de Lima</h2>
+                <p class="sobre-membro">
+                    Formação Academica:
+                    <br>
+                    Experiência Profissional:
+                    <br>
+                    Informações de contato:
+                    <br>
+                </p>
+            </div>
+        </section>
+        <br>
+        <section class="secao-membro" style="flex-direction: row-reverse">
+            <div>
+                <img class="foto-membro" src="..\T1_GRUPO\Foto\foto-gabriel.jpg" alt="Foto de rosto do membro do grupo: Gabriel">
+            </div>
+            <div>
+                <h2 class="nome-membro">Gabriel Freitas de Lima</h2>
+                <p class="sobre-membro">
+                    Olá, me chamo Gabriel, sou graduado em Processos Gerenciais, bacharel em Administração e possuo formações técnicas em Design e Computação Gráfica. Minha especialização atual é Desenvolvimento de Software em Multiplataforma. 
+                    <br>
+                    Iniciei minha carreira na área de Projetos de Negócios no banco Bradesco como Jovem Aprendiz, onde posteriormente atuei como Analista de Projetos.
+                    <br>
+                    Possuo experiências também com elaboração de análises estatísticas, relatórios operacionais, apresentações gerenciais/estratégicas e produção de peças gráficas, vetorial e digital.
+                    <br>
+                    Recentemente, decidi migrar para área de TI, atuando atualmente como Analista de Sistemas (desenvolvimento Front-End) de Design System.
+                </p>
+            </div>
+        </section>
 
 		
-
-		</div>
-
-		
-
 	</section>
 
 </body>
