--- a/galeria.html
+++ b/galeria.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style_galeria.css">
     <title> Galeria </title>
 </head>
 
@@ -11,13 +11,13 @@
         <h1> Sergio Dias</h1>
         <div class="row">
             <div class="column">
-                <img src="Imagens/sergio-4.png">
+                <img src="img/SERGIO_1.png">
             </div>
             <div class="column">
-                <img src="Imagens/sergio-5.jpg">
+                <img src="img/SERGIO_2.png">
             </div>
             <div class="column">
-                <img src="Imagens/sergio-3.jpg">
+                <img src="img/SERGIO_3.png">
             </div>
         </div>
         <h4> Meu nome é Sergio, sou Técnico formado em DSM (Desenvolvimento de Software Multiplataforma). Sou uma pessoa calma e resiliente, o que me permite abordar os desafios tecnológicos de maneira racional e determinada. </h4>
@@ -25,13 +25,13 @@
         <h1> Leonardo Saes </h1>
         <div class="row">
             <div class="column">
-                <img src="Imagens/leo-1.jpg">
+                <img src="img/LEONARDO_1.png">
             </div>
             <div class="column">
-                <img src="Imagens/leo-2.jpg">
+                <img src="img/LEONARDO_2.png">
             </div>
             <div class="column">
-                <img src="Imagens/leo-3.jpg">
+                <img src="img/LEONARDO_3.png">
             </div>
         </div>
         <h4> Meu nome é Leonardo Saes, sou técnico em Desenvolvimento de Sistemas e formando em Desenvolvimento de Software Multiplataforma </h4>
@@ -39,13 +39,13 @@
         <h1> Gabriel Lima </h1>
         <div class="row">
             <div class="column">
-                <img src="Imagens/messi.jpg">
+                <img src="img/GABRIEL_1.jpg">
             </div>
             <div class="column">
-                <img src="Imagens/messi.jpg">
+                <img src="img/GABRIEL_2.JPG">
             </div>
             <div class="column">
-                <img src="Imagens/messi.jpg">
+                <img src="img/GABRIEL_3.JPEG">
             </div>
         </div>
         <h4> Meu nome é Gabriel, sou Técnico formado em DSM (Desenvolvimento de Software Multiplataforma). Sou uma pessoa calma e resiliente, o que me permite abordar os desafios tecnológicos de maneira racional e determinada. </h4>
@@ -53,13 +53,13 @@
         <h1> Maxwell Lopes </h1>
         <div class="row">
             <div class="column">
-                <img src="Imagens/messi.jpg">
+                <img src="img/MAXWELL_1.png">
             </div>
             <div class="column">
-                <img src="Imagens/messi.jpg">
+                <img src="img/MAXWELL_2.png">
             </div>
             <div class="column">
-                <img src="Imagens/messi.jpg">
+                <img src="img/MAXWELL_3.png">
             </div>
         </div>
         <h4> Meu nome é Maxwell, sou Técnico formado em DSM (Desenvolvimento de Software Multiplataforma). Sou uma pessoa calma e resiliente, o que me permite abordar os desafios tecnológicos de maneira racional e determinada. </h4>
